# OpenGLInsightsCode

./: README.md
Chapter 06 An Introduction to Tessellation Shaders/: readme.txt
Chapter 07 Procedural Textures in GLSL/demo1/: Makefile  README.txt  cellular.vert  fragment1.glsl  fragment2.glsl  fragment3.glsl  fragment4.glsl  fragment5.glsl  fragment6.glsl  fragment7.glsl  fragment8.glsl  shaderbench.c  texture.tga  vertex.glsl
Chapter 07 Procedural Textures in GLSL/demo2/: LICENSE.txt  Makefile  README.txt  fbmnoise.frag  fbmnoise.vert  flownoise2.frag  flownoise2.vert  shaderdemo.c  snoise3.frag  snoise3.vert  spots.frag  spots.vert  tiles.frag  tiles.vert
Chapter 07 Procedural Textures in GLSL/shadertutorial/: shadertutorial.css  shadertutorial.html
Chapter 09 Mixing Graphics and Compute with Multiple GPUs/: License.txt  Readme.txt  main.cu
Chapter 09 Mixing Graphics and Compute with Multiple GPUs/linux/: Makefile
Chapter 09 Mixing Graphics and Compute with Multiple GPUs/win/: Interoperability.sln  Interoperability.vcproj
Chapter 10 GPU Tessellation We Still Have a LOD of Terrain to Cover/: OpenGLInsightsTessellation.sln  README.first.txt
Chapter 10 GPU Tessellation We Still Have a LOD of Terrain to Cover/OpenGLInsightsTessellation/: Makefile  OpenGLInsightsTessellation.vcxproj  OpenGLInsightsTessellation.vcxproj.filters  terrainTessDemo.cpp  vsGLInfoLib.cpp  vsGLInfoLib.h  vsLogLib.cpp  vsLogLib.h  vsMathLib.cpp  vsMathLib.h  vsResourceLib.cpp  vsResourceLib.h  vsShaderLib.cpp  vsShaderLib.h  vsTerrainLODSingleScaledLib.cpp  vsTerrainLODSingleScaledLib.h  vsTerrainLib.cpp  vsTerrainLib.h  vslibs.h
Chapter 11 Antialiased Volumetric Lines Using Shader-Based Extrusion/: AppOpenGL.vcproj  LinesRenderer.cpp  LinesRenderer.h
Chapter 11 Antialiased Volumetric Lines Using Shader-Based Extrusion/Application/: code_principal.cpp  glut_callback.cpp
Chapter 11 Antialiased Volumetric Lines Using Shader-Based Extrusion/FBO/: FrameBufferObject.cpp  FrameBufferObject.h
Chapter 11 Antialiased Volumetric Lines Using Shader-Based Extrusion/GPUProgram/: GPUProgram.cpp
Chapter 11 Antialiased Volumetric Lines Using Shader-Based Extrusion/MathLib/: Matrix4.cpp  Quaternion.cpp  Vector4.cpp
Chapter 11 Antialiased Volumetric Lines Using Shader-Based Extrusion/OGLTools/: OGLShapes.h  (+1 more)
Chapter 12 2D Shape Rendering by Distance Fields/: LICENSE.txt  README.txt
Chapter 13 Efficient Text Rendering in WebGL/: BitmapFontDemo.html  CanvasRenderDemo.html
Chapter 14 Layered Textures Rendering Pipeline/: README.txt
Chapter 15 Depth of Field with Bokeh Rendering/src/: CMakeLists.txt  mainbokeh.cpp
Chapter 15 Depth of Field with Bokeh Rendering/src/glf/: CMakeLists.txt  bound.hpp  buffer.cpp  buffer.hpp  buffer.inl  camera.cpp  camera.hpp  camera.inl  csm.cpp  csm.hpp  debug.cpp  debug.hpp  dofprocessor.cpp  dofprocessor.hpp  font.cpp  font.hpp  font.inl  gbuffer.cpp  gbuffer.hpp  geometry.cpp  geometry.hpp  helper.cpp  helper.hpp  memory.cpp  memory.hpp  memory.inl  pass.cpp  pass.hpp  postprocessor.cpp  postprocessor.hpp  probe.cpp  probe.hpp  rng.cpp  rng.hpp  scene.cpp  scene.hpp  sky.cpp  sky.hpp  ssao.cpp  ssao.hpp  (+16 more)
Chapter 15 Depth of Field with Bokeh Rendering/src/glf/io/: CMakeLists.txt  config.cpp  config.hpp  image.cpp  image.hpp  model.cpp  model.hpp  scene.cpp  scene.hpp
Chapter 15 Depth of Field with Bokeh Rendering/src/glui/: CMakeLists.txt  arial12.hpp  context.cpp  context.hpp  painter.cpp  painter.hpp  widgets.cpp  widgets.hpp
Chapter 17 Real-Time Physically Based Deformation Using Transform Feedback/: TransformFeedback_Cloth.sln
Chapter 18 Hierarchical Depth Culling and Bounding-Box Management on the GPU/: README.txt  build_ms.cmd
Chapter 19 Massive Number of Shadow-Casting Lights with Layered Rendering/: .cproject  .project  dragon.cpp  dragon.h  main.cpp  tga.cpp
Chapter 20 Efficient Layered Fragment Buffer Techniques/: .camera.txt  LICENCE.txt  Makefile  README.txt  armadillo.ctm  bunny.ctm  camera-bench-atrium2.txt  chinesedragon.ctm  config.cfg  dragon.ctm  extraglenums.h  happybuddha.ctm  imageBuffer.cpp  imageBuffer.h  lfb.cpp  lfb.glsl  lfb.h  lfbBasic.cpp  lfbBasic.glsl  lfbBasic.h  lfbClear.vert  lfbCopy.vert  lfbCount.frag  lfbCount.vert  lfbDisplay.frag  lfbDisplay.vert  lfbLinked.cpp  lfbLinked.glsl  lfbLinked.h  lfbPages.cpp  lfbPages.glsl  lfbPages.h  lfbRagged.cpp  lfbRagged.glsl  lfbRagged.h  lfbRaggedSort.vert  lfbRender.frag  lfbRender.vert  lfbZero.vert  main.cpp  (+8 more)
Chapter 21 Programmable Vertex Pulling/: .cproject  .project  buddha.cpp  buddha.h  main.cpp  tga.h  wavefront.cpp  wavefront.h
Chapter 26 Indexing Multiple Vertex Arrays/: CMakeLists.txt
Chapter 26 Indexing Multiple Vertex Arrays/article/: Article.cpp  SimpleShading.fragmentshader  SimpleShading.vertexshader  config.hpp  gradient.tga  packedvertex.hpp  vboindexer.cpp  vboindexer.hpp
Chapter 26 Indexing Multiple Vertex Arrays/common/: controls.cpp  controls.hpp  objloader.cpp  objloader.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
Chapter 27 Multi-GPU Rendering on NVIDIA Quadro/: MultiGPU.sln  MultiGPU.vcproj  README.txt  commandLine.cpp  commandLine.h  glContext.cpp  glContext.h  main.cpp  stage.cpp  stage.h  stageConsumer.cpp  stageConsumer.h  stageProducer.cpp  stageProducer.h  stdafx.cpp  stdafx.h  timer.cpp  timer.h  window.cpp
Chapter 28 Asynchronous Buffer Transfers/: get_glm.bat  get_glm.sh  readme.txt
Chapter 29 Fermi Asynchronous Texture Transfers/: README.txt
Chapter 32 An OpenGL-Friendly Geometry File Format and Its Maya Exporter/: readme.md
Chapter 33 ARB_debug_output A Helping Hand for Desperate Developers/: OpenGLInsightsDebug.sln
Chapter 35 A Real-Time Profiling Tool/: README.txt
Chapter 37 Performance State Tracking/: Ch37.sln
Chapter 39 The ANGLE Project Implementing OpenGL ES 2.0 on Direct3D/: readme.txt
Chapter 40 SceneJS A WebGL-Based Scene Graph Engine/: readme.txt
Chapter 41 Features WebGL and Design Choices in SpiderGL/: readme.txt
Chapter 43 A Subset Approach to Using OpenGL and OpenGL ES/: readme.txt
(+838 files in other folders)
